WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272532
REGRESSION (
275943@main
): Apps using Aspects framework can crash after ApplicationStateTracker adds KVObserver
https://bugs.webkit.org/show_bug.cgi?id=272532
Summary
REGRESSION (275943@main): Apps using Aspects framework can crash after Applic...
Jer Noble
Reported
2024-04-11 08:57:57 PDT
REGRESSION (
275943@main
): Apps using Aspects framework can crash after ApplicationStateTracker adds KVObserver
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-04-11 08:58:03 PDT
<
rdar://problem/125932015
>
Jer Noble
Comment 2
2024-04-11 09:00:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27147
EWS
Comment 3
2024-04-11 13:09:28 PDT
Committed
277396@main
(759b0ea6d2cd): <
https://commits.webkit.org/277396@main
> Reviewed commits have been landed. Closing PR #27147 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug