REGRESSION (275943@main): Apps using Aspects framework can crash after ApplicationStateTracker adds KVObserver https://bugs.webkit.org/show_bug.cgi?id=272532 rdar://125932015

Reviewed by Brent Fulgham.

Aspects.framework will crash if it tries to add a "hook" for KVO after an observer has already
been added to the target object. Add a linked-on-or-after check which disables this KVO, giving
apps time to move off of using Aspects in their production code.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WebKit/UIProcess/ApplicationStateTracker.mm:
(-[WKUIWindowSceneObserver setObservedWindow:]):

Canonical link: https://commits.webkit.org/277396@main